<resources>
    //TODO create resource id for layout strings

    <string name="app_name">ScientificCalculator</string>

    <!---  Number buttons  -->
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_0">0</string>
    <string name="button_Lparen">(</string>
    <string name="button_Rparen">)</string>


    <!--- Operator buttons -->
    <string name="decimal_operator">.</string>
    <string name="percentile_operator">%</string>
    <string name="equals_operator">=</string>
    <string name="division_operator">/</string>
    <string name="multiplication_operator">*</string>
    <string name="addition_operator">+</string>
    <string name="subtraction_operator">-</string>
    <string name="clear_operator">C</string>
    <string name="modulo_operator">%</string>
    <string name="e_operator">e</string>


    <!--- Scientific Calc. Buttons -->
    <string name="sin_operator">sin</string>
    <string name="cos_operator">cos</string>
    <string name="tan_operator">tan</string>
    <string name="rad_operator">Rad</string>
    <string name="deg_operator">Deg</string>
    <string name="log_operator">log</string>
    <string name="exponent_operator">x^y</string>
    <string name="squareroot_operator">√</string>
    <string name="pi_operator">π</string>
    <string name="factorial_operator">x!</string>
    <string name="inv_button">Inv</string>
    <string name="in_operator">In</string>



</resources>
