<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="nyc.c4q.scientificcalculator.MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="110dp"
            android:textSize="@dimen/view_text_size"
            android:textAlignment="textEnd"
            android:textColor="@color/colorText"
            android:background="@color/colorView"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:enabled="false"
            android:lines="2"
            android:maxLines="2"
            android:textSize="@dimen/view_text_size"
            android:textAlignment="textEnd"
            android:textColor="@color/colorText"
            android:background="@color/colorView"/>

        <Button
            android:id="@+id/buttonSeven"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:text="@string/button_7"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonEight"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_toRightOf="@+id/buttonSeven"
            android:text="@string/button_8"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonNine"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_toRightOf="@+id/buttonEight"
            android:text="@string/button_9"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonFour"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSeven"
            android:text="@string/button_4"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonFive"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonEight"
            android:layout_toEndOf="@id/buttonFour"
            android:text="@string/button_5"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonSix"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonNine"
            android:layout_toEndOf="@id/buttonFive"
            android:text="@string/button_6"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonOne"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonFour"
            android:text="@string/button_1"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonTwo"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonFive"
            android:layout_toEndOf="@id/buttonOne"
            android:text="@string/button_2"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonThree"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSix"
            android:layout_toEndOf="@id/buttonTwo"
            android:text="@string/button_3"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonOne"
            android:text="@string/decimal_operator"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/buttonZero"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonTwo"
            android:layout_toEndOf="@id/buttonDot"
            android:text="@string/button_0"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonThree"
            android:layout_toEndOf="@id/buttonZero"
            android:text="@string/equals_operator"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/buttonNine"
            android:layout_toEndOf="@id/buttonNine"
            android:layout_alignParentRight="true"
            android:text="@string/division_operator"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/buttonSix"
            android:layout_toEndOf="@id/buttonSix"
            android:layout_alignParentRight="true"
            android:text="@string/multiplication_operator"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/buttonEqual"
            android:layout_toEndOf="@id/buttonEqual"
            android:layout_alignParentRight="true"
            android:text="@string/addition_operator"
            android:textSize="@dimen/text_size"/>


        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/buttonThree"
            android:layout_toEndOf="@id/buttonThree"
            android:layout_alignParentRight="true"
            android:text="@string/subtraction_operator"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/buttonLParen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonDot"

            android:text="@string/left_parenthetical"
            android:textSize="@dimen/text_size" />


        <Button
            android:id="@+id/buttonRParen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonEqual"
            android:layout_alignLeft="@id/buttonZero"
            android:text="@string/right_parenthetical"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonEqual"
            android:layout_alignLeft="@id/buttonEqual"
            android:text="@string/percentile_operator"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonAdd"
            android:layout_alignRight="@id/buttonAdd"
            android:text="@string/clear_operator"
            android:textSize="@dimen/text_size"
            android:layout_toEndOf="@+id/buttonEqual" />


    </RelativeLayout>
</layout>